add get shop pointtecket
